2008-08-22  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Remove cast macros that are missing with xulrunner
	  1.9
	* windows.mak: Add XUL_VERSION define for the windows build.
	* Widget.cpp: Define NS_XPCOMPROXY_CONTRACTID if it's not defined yet
	  (xulrunner 1.9 has this inside a private header that we can't
	  include). Only initialize the AppShell if we're building against
	  xulrunner 1.8 (AppShell is not available on 1.9, apparently :P)
	* LocationProvider.cpp: Ask for specific xulrunner version on runtime
	  depending on which xulrunner we're building against. EOL fixes.
	* Makefile.am: Don't include custom gluezilla_* headers for xulrunner
	  1.9
	* interfaces.h: Change include paths depending on which xulrunner
	  version we're building against. Remove unused XRE API defines.

2008-06-11  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Fix missing return

2008-06-10  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp, BrowserWindow.h: Disable uri context listener (not
	  being used right now). Add context menu event listener, security
	  change callback.
	* gluezilla.h: Add context menu event and security change callback.
	* interfaces.h: Add support for context menu event listener.

2008-06-10  Andreia Gaita <avidigal@novell.com> 

	* Widget.h: Fix mismatching calls

2008-06-02  Andreia Gaita <avidigal@novell.com> 

	* gtkWidget.cpp, Widget.cpp, Widget.h: Clean up

2008-05-22  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp, gluezilla.h: Add more xpcom helper objects for
	  OnProgress

2008-05-20  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Added progress and request objects from the
	  loading events. Track progress updates.
	* gluezilla.h: Hook up new loading and progress events

2008-04-18  Andreia Gaita <avidigal@novell.com> 

	* gluezilla_nsIScriptContext.h, gluezilla_nsIScriptGlobalObject.h: Add
	  eof newline
	* gluezilla.h: Fix forward declaration
